# sturgeon-monitoring

./: .gitignore  LICENSE  README.md  app.py  cmd.txt  model-export.py  openvino-prepare.py  pyproject.toml  requirements.txt  y11_seg_train.py  yolo_tracker_app-openvino.py  yolo_tracker_app.py  yolo_tracker_gradio.py
docs/: openvino-yolov11-instance-segmentation-with-output.txt  ultralytics-cross-validation.txt  ultralytics-export.txt  ultralytics-hyperparameter-tuning.txt  ultralytics-onnx.txt  ultralytics-predict.txt  ultralytics-segment.txt  ultralytics-track.txt  ultralytics-train.txt  ultralytics-yolov11.txt
models/best_openvino_model/: best.xml
