[project]
name = "sturgeon-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "numpy>=2.2.6",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "onnxruntime-directml>=1.23.0",
    "openvino>=2025.3.0",
    "psutil>=7.1.3",
    "pyside6>=6.10.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "roboflow>=1.2.11",
    "tensorrt>=10.14.1.48",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "ultralytics>=8.3.225",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
